--- a/weone/src/index.html
+++ b/weone/src/index.html
@@ -7,6 +7,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="preconnect" href="https://primefaces.org" />
         <link href="https://fonts.cdnfonts.com/css/lato" rel="stylesheet" />
+        <script
+            async
+            data-clerk-publishable-key="pk_test_ZW5nYWdlZC1wZWdhc3VzLTgxLmNsZXJrLmFjY291bnRzLmRldiQ"
+            src="https://cdn.clerk.com/script.js"
+            type="text/javascript"
+        ></script>
     </head>
 
     <body>
